--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Puddle Studios</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
 
 
 
@@ -13,11 +13,11 @@
         <section class="HeaderButton"><a href="Games.html">GAMES</a></section>
         <section class="MenuWrapper NoOutline Home">
             <a href="index.html" class="home-link"></a>
-            <section class="MenuMoon Moon1"><img src="Images/Moons/Full Moon.png"></section>
-            <section class="MenuMoon Moon2"><img src="Images/Moons/Cresent Moon 1.png"></section>
-            <section class="MenuMoon Moon3"><img src="Images/Moons/Cresent Moon Flip 1.png"></section>
-            <section class="MenuMoon Moon4"><img src="Images/Moons/Cresent Moon 2.png"></section>
-            <section class="MenuMoon Moon5"><img src="Images/Moons/Cresent Moon Flip 2.png"></section>
+            <section class="MenuMoon Moon1"><img src="assets/images/Moons/Full Moon.png"></section>
+            <section class="MenuMoon Moon2"><img src="assets/images/Moons/Cresent Moon 1.png"></section>
+            <section class="MenuMoon Moon3"><img src="assets/images/Moons/Cresent Moon Flip 1.png"></section>
+            <section class="MenuMoon Moon4"><img src="assets/images/Moons/Cresent Moon 2.png"></section>
+            <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
 
         <section class="HeaderButton"><a href="Art.html">ART</a></section>
@@ -36,7 +36,7 @@
 
                 <section>
 
-                    <img src="Images/Artist Card.png">
+                    <img src="assets/images/Artist Card.png">
                 </section>
            </section>
 
@@ -45,14 +45,14 @@
             </section>
             <section>
 
-                <img src="Images/Profile Pic Website 5.png">
+                <img src="assets/images/Profile Pic Website 5.png">
             </section>
 
            </section>
            <section class="hero-card Style4">
             <section>
 
-                <img src="Images/Developer Card.png">
+                <img src="assets/images/Developer Card.png">
             </section>
             <section class="hero-card-cover Style3"></section>
            </section>
@@ -147,7 +147,7 @@
 
         <section>
             <a href="https://puddleglum.itch.io/mechanical-lab" class="fill-div" target="_blank">
-                <img src="Images/Mechanical Labyrinth Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
+                <img src="assets/images/Mechanical Labyrinth Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
    </section>
@@ -159,7 +159,7 @@
 
         <section>
             <a href="https://puddleglum.itch.io/labyrinth" class="fill-div" target="_blank">
-                <img src="Images/Labyrinth Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
+                <img src="assets/images/Labyrinth Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
    </section>
@@ -172,7 +172,7 @@
 
         <section>
             <a href="https://puddleglum.itch.io/stellarium" class="fill-div" target="_blank">
-                <img src="Images/Stellarium Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
+                <img src="assets/images/Stellarium Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
    </section>
@@ -186,7 +186,7 @@
     
     <section>
         <a href="https://puddleglum.itch.io/planetarium" class="fill-div" target="_blank">
-            <img src="Images/Planetarium Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
+            <img src="assets/images/Planetarium Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
         </a> 
     </section>
 </section>
@@ -202,7 +202,7 @@
 
         <section>
             <a href="https://puddleglum.itch.io/the-designer" class="fill-div" target="_blank">
-                <img src="Images/The Designer Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
+                <img src="assets/images/The Designer Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
    </section>
@@ -215,7 +215,7 @@
 
         <section>
             <a href="https://puddleglum.itch.io/uno" class="fill-div" target="_blank">
-                <img src="Images/Uno Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
+                <img src="assets/images/Uno Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
    </section>
@@ -230,7 +230,7 @@
 
     <section>
         <a href="https://puddleglum.itch.io/babylon" class="fill-div" target="_blank">
-            <img src="Images/Babylon Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
+            <img src="assets/images/Babylon Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
         </a> 
     </section>
 </section>
@@ -242,7 +242,7 @@
 
     <section>
         <a href="https://puddleglum.itch.io/conways-game-of-life" class="fill-div" target="_blank">
-            <img src="Images/Game Of Life Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
+            <img src="assets/images/Game Of Life Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
         </a> 
     </section>
 </section>
@@ -272,18 +272,18 @@
     <section class="DisplayGrid Style1 span-four">
 
         <section class="span-two-vert">
-            <a href="Art.html"><img src="Images/Art Display 3.png"></a>
+            <a href="Art.html"><img src="assets/images/Art Display 3.png"></a>
         </section>
         <section class="span-three">
-            <a href="Art.html"><img src="Images/Art Display 2.png"></a>
+            <a href="Art.html"><img src="assets/images/Art Display 2.png"></a>
         </section>
         <section class="span-two">
-            <a href="Art.html"></a><img src="Images/Art Display 5.png"></a>
+            <a href="Art.html"></a><img src="assets/images/Art Display 5.png"></a>
 
 
         </section>
         <section class="span-one">
-            <a href="Art.html"><img src="Images/Art Display 1.png"></a>
+            <a href="Art.html"><img src="assets/images/Art Display 1.png"></a>
         </section>
     </section>
 
