added game pages aswell as finished socials pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
 
         <section class="HeaderButton"><a href="Art.html">ART</a></section>
-        <section class="HeaderButton"><a href="Social.html">BLOG</a></section>
+        <section class="HeaderButton"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
     </header>
 
     <div class="GridWrapper">
@@ -84,9 +84,6 @@
 <section class="section-divider"></section>
 <section class="section-divider no-line micro"></section>
 <!--LINE-->
-
-
-
 
 <section class = "text-box span-three large NoOutline">
     <section class="NoOutline text-headerS1">HISTORY</section>
@@ -258,16 +255,11 @@
 
     
     <section class="section-divider no-line"></section>
-    <section class="section-divider no-line"></section>
 
     <section class="main-title NoOutline align-center">ART</section>
     <section class="section-divider no-line small"></section>
     <section class="section-divider"></section>
-    <section class="section-divider no-line micro"></section>
-
-  
-
-
+    <section class="section-divider no-line small"></section>
 
     <section class="DisplayGrid Style1 span-four">
 
@@ -278,7 +270,7 @@
             <a href="Art.html"><img src="assets/images/Art Display 2.png"></a>
         </section>
         <section class="span-two">
-            <a href="Art.html"></a><img src="assets/images/Art Display 5.png"></a>
+            <a href="Art.html"><img src="assets/images/Art Display 5.png"></a>
 
 
         </section>
@@ -293,7 +285,7 @@
 
 
 
-    <section class="section-divider no-line"></section>
+    <section class="section-divider no-line small"></section>
 
     <section class="section-divider"></section>
 
