First Usable push

--- a/Game Pages/Babylon.html
+++ b/Game Pages/Babylon.html
@@ -56,7 +56,7 @@
             <section class="CrossBarSection Style1 b1 b2"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four">
+            <section class="span-four NoOutline">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/4573470?color=100c17" width="900" height="520"><a href="https://puddleglum.itch.io/babylon">Play Babylon on itch.io</a></iframe>            
                 </section>
                 <section class="section-divider no-line micro"></section>
