--- a/Game Pages/Stelarium.html
+++ b/Game Pages/Stelarium.html
@@ -56,13 +56,35 @@
             <section class="CrossBarSection Style1 b1 b2"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four">
+            <section class="span-four NoOutline">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/9928972?color=000d16" width="960" height="620"><a href="https://puddleglum.itch.io/stellarium">Play Stellarium on itch.io</a></iframe>            
                 </section>  
                 <section class="section-divider no-line micro"></section>
             <section class="CrossBarSection Style1 b3 b4"></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
+            <section class="text-box second-title span-three ">Description</section>
+            
+            <section class="text-box span-four NoOutline">
+                This is an homage to Planetarium by Daniel Linssen. Go check out his page if you haven't yet.
+<br/><br/>
+                This is not a game. Stellarium is a procedural solar system generator using real Newtonian physics. If you would like to develop something with this physics system please check out Gravity Simulator on my page. it contains all the source code and documentation for you to get started.
+                
+            </section>
+
+            <section class="text-box second-title span-three ">Hidden Seeds</section>
+            <section class="text-box span-four NoOutline">
+                -Polaris<br/>
+-Sirius<br/>
+-Procyon<br/>
+-Gomeisa<br/>
+-Betelgeuse<br/>
+-Bellatrix<br/>
+-Rigel<br/>
+-Salph<br/>
+-Midas<br/>
+            </section>
+
             <section class="section-divider no-line large"></section>
 
         </section>
