--- a/Game Pages/Uno.html
+++ b/Game Pages/Uno.html
@@ -56,7 +56,7 @@
             <section class="CrossBarSection Style1 b1 b2"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four">
+            <section class="span-four NoOutline">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/11735995?color=0a090f" width="850" height="500"><a href="https://puddleglum.itch.io/uno">Play Uno on itch.io</a></iframe>           
              </section>
 
@@ -64,6 +64,11 @@
             <section class="CrossBarSection Style1 b3 b4"></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
+
+            <section class="text-box second-title span-three ">Description</section>
+            <section class="text-box span-four NoOutline">
+                A quick aesthetic uno remake i made to test my art and programing skills
+</section>
             <section class="section-divider no-line large"></section>
 
         </section>
