--- a/Social.html
+++ b/Social.html
@@ -34,13 +34,13 @@
 
 <section class="DisplayGrid Style1  span-four span-one-vert">
     <section class=" b3">
-        <img src="assets//images/Instagram logo.png">
+        <a href="https://www.instagram.com/puddle.studios/" target="_blank"><img src="assets//images/Instagram logo.png"></a>
     </section>
     <section class="span-two Style2 b1">
     </section> 
 
     <section>
-        <img src="assets//images/Art Display 1.png">
+       <a href="https://www.instagram.com/puddle.studios/" target="_blank"> <img src="assets//images/Art Display 1.png"></a>
     </section>
 </section>
 
@@ -55,7 +55,7 @@ EDGE BAR
 ===============================================-->
 <section class="DisplayGrid Style1 span-three-vert span-four ">
     
-    <section class=" span-four span-two-vert b2"> <img src="assets//images/Itch Promo 1.png"></section>
+    <section class=" span-four span-two-vert b2"> <a href="https://puddleglum.itch.io/" target="_blank"><img src="assets//images/Itch Promo 1.png"></a> </section>
     <section class="span-two Style4 b3 b1"  ></section>
     <section class=" Style10 b4"  ></section>
     <section class=" Style2 b2"  ></section>
@@ -66,12 +66,12 @@ EDGE BAR
 
 <section class="DisplayGrid Style1 span-three-vert span-four ">
     
-    <section class=" span-four"> <img src="assets//images/Art Display 2.png"></section>
-    <section class=" span-one Style5"><img src="assets//images/Puddle Logos.png"> </section>
-    <section class=" span-one span-two-vert b1 b2 Style4"> <img src="assets/images/Tumblr Promo 4.png"> </section>
-    <section class=" span-one span-two-vert b1 b2 "> <img src="assets/images/Tumblr Promo.png"> </section>
-    <section class=" span-one span-two-vert b3 Style2"> <img src="assets/images/Tumblr Promo 2.png"> </section>
-    <section class=" span-one b2 b4 Style1"> <img src="assets/images/Tumblr Promo 3.png"> </section>
+    <section class=" span-four"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets//images/Art Display 2.png"></a> </section>
+    <section class=" span-one Style5"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets//images/Puddle Logos.png"> </a> </section>
+    <section class=" span-one span-two-vert b1 b2 Style4"> <a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 4.png"> </a> </section>
+    <section class=" span-one span-two-vert b1 b2 "><a href="https://puddle-studios.tumblr.com/" target="_blank"> <img src="assets/images/Tumblr Promo.png"> </a> </section>
+    <section class=" span-one span-two-vert b3 Style2"> <a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 2.png"> </a> </section>
+    <section class=" span-one b2 b4 Style1"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 3.png"> </a> </section>
 
 </section>
 
@@ -87,6 +87,7 @@ EDGE BAR
         Buisness Email: 
         <br/>
         &emsp;PuddleglumStudios@gmail.com
+        <br/>
         Personal Email:
         <br/>
         &emsp;Puddleglumcat@gmail.com
