--- a/Social.html
+++ b/Social.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Socials</title>
+        <title>Puddle Studios</title>
         <link rel="stylesheet" href="assets/css/styles.css">
 
 
