--- a/Game Pages/Stelarium.html
+++ b/Game Pages/Stelarium.html
@@ -3,6 +3,7 @@
     <head>
         <title>Puddle Studios Stelarium</title>
         <link rel="stylesheet" href="../assets/css/styles.css">
+        <link rel="shortcut icon" type = "x-icon" href="../assets/images/Tray Icon.png"></link>
 
 
 
