Attempted buggy tray icon fix

--- a/Games.html
+++ b/Games.html
@@ -3,7 +3,7 @@
     <head>
         <title>Puddle Studios</title>
         <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="shortcut icon" type = "x-icon" href="assets/images/Tray Icon.png"></link>
+        <link rel="shortcut icon" type = "x-icon" href="./assets/images/Tray Icon.png"></link>
 
 
 
