hot fix: game page from index opened new window

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 <section class="DisplayGrid Style1 span-four">
     <section class="hover-card">
         <section class="hover-card-cover Style1">
-            <a href="Game Pages/MechMaze.html" class="fill-div" target="_blank"></a> 
+            <a href="Game Pages/MechMaze.html" class="fill-div"></a> 
         </section>
 
         <section>
-            <a href="Game Pages/MechMaze.html" class="fill-div" target="_blank">
+            <a href="Game Pages/MechMaze.html" class="fill-div">
                 <img src="assets/images/Mechanical Labyrinth Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
@@ -155,11 +155,11 @@
 
     <section class="hover-card">
         <section class="hover-card-cover Style3">
-            <a href="Game Pages/Labyrinth.html" class="fill-div" target="_blank"></a> 
+            <a href="Game Pages/Labyrinth.html" class="fill-div"></a> 
         </section>
 
         <section>
-            <a href="Game Pages/Labyrinth.html" class="fill-div" target="_blank">
+            <a href="Game Pages/Labyrinth.html" class="fill-div">
                 <img src="assets/images/Labyrinth Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
@@ -168,11 +168,11 @@
 
     <section class="hover-card">
         <section class="hover-card-cover Style2">
-            <a href="Game Pages/Stelarium.html" class="fill-div" target="_blank"></a> 
+            <a href="Game Pages/Stelarium.html" class="fill-div"></a> 
         </section>
 
         <section>
-            <a href="Game Pages/Stelarium.html" class="fill-div" target="_blank">
+            <a href="Game Pages/Stelarium.html" class="fill-div">
                 <img src="assets/images/Stellarium Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
@@ -181,12 +181,12 @@
 
    <section class="hover-card">
     <section class="hover-card-cover Style5">
-        <a href="Game Pages/Planetarium.html" class="fill-div" target="_blank"></a> 
+        <a href="Game Pages/Planetarium.html" class="fill-div" ></a> 
     </section>
 
     
     <section>
-        <a href="Game Pages/Planetarium.html" class="fill-div" target="_blank">
+        <a href="Game Pages/Planetarium.html" class="fill-div" >
             <img src="assets/images/Planetarium Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
         </a> 
     </section>
@@ -197,12 +197,12 @@
 
     <section class="hover-card">
         <section class="hover-card-cover Style10">
-            <a href="Game Pages/The Designer.html" class="fill-div" target="_blank"></a> 
+            <a href="Game Pages/The Designer.html" class="fill-div"></a> 
         </section>
 
 
         <section>
-            <a href="Game Pages/The Designer.html" class="fill-div" target="_blank">
+            <a href="Game Pages/The Designer.html" class="fill-div" >
                 <img src="assets/images/The Designer Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
@@ -211,11 +211,11 @@
 
     <section class="hover-card">
         <section class="hover-card-cover Style11">
-            <a href="Game Pages/Uno.html" class="fill-div" target="_blank"></a> 
+            <a href="Game Pages/Uno.html" class="fill-div" ></a> 
         </section>
 
         <section>
-            <a href="Game Pages/Uno.html" class="fill-div" target="_blank">
+            <a href="Game Pages/Uno.html" class="fill-div" >
                 <img src="assets/images/Uno Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
             </a> 
         </section>
@@ -226,11 +226,11 @@
 
    <section class="hover-card">
     <section class="hover-card-cover Style9">
-        <a href="Game Pages/Babylon.html" class="fill-div" target="_blank"></a> 
+        <a href="Game Pages/Babylon.html" class="fill-div"></a> 
     </section>
 
     <section>
-        <a href="Game Pages/Babylon.html" class="fill-div" target="_blank">
+        <a href="Game Pages/Babylon.html" class="fill-div" >
             <img src="assets/images/Babylon Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
         </a> 
     </section>
@@ -238,11 +238,11 @@
 
 <section class="hover-card">
     <section class="hover-card-cover Style4">
-        <a href="Game Pages/GOL.html" class="fill-div" target="_blank"></a> 
+        <a href="Game Pages/GOL.html" class="fill-div"></a> 
     </section>
 
     <section>
-        <a href="Game Pages/GOL.html" class="fill-div" target="_blank">
+        <a href="Game Pages/GOL.html" class="fill-div">
             <img src="assets/images/Game Of Life Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%" height="100%">
         </a> 
     </section>
