Updated home page text

--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@
 <section class = "text-box span-three large NoOutline">
     <section class="NoOutline text-headerS1">ABOUT</section>
 
-    &emsp;&emsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Obcaecati exercitationem, rem quos molestias consequuntur 
-    quam harum eaque illum doloremque quaerat, aliquam corporis 
-    nisi omnis. Veritatis accusamus at officia iusto eveniet?
+    &emsp;&emsp;Puddle Studios is a solo indie dev studio founded by Puddle (Rowan Byington), Puddle started developing games in 2020, and specializes in digital art and programming, having developed multiple games fully solo, With his most recent project "Forgotten God" planned to be his first commercial release.
 
 </section>
 
@@ -91,18 +88,19 @@
 
 <section class = "text-box span-three large NoOutline">
     <section class="NoOutline text-headerS1">HISTORY</section>
-    &emsp;&emsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Obcaecati exercitationem, rem quos molestias consequuntur 
-    quam harum eaque illum doloremque quaerat, aliquam corporis 
-    nisi omnis. Veritatis accusamus at officia iusto eveniet?
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Fugiat assumenda eveniet quam sapiente tempore? 
-    Deserunt at praesentium veniam assumenda, ipsa, 
-    unde quisquam fugit magni animi dolorem nesciunt, 
-    dolorum officia iure.
+    &emsp;&emsp; Puddle’s interest in programming began early, supported by his parents. At 12, he started with C++ and continued until 14, when he tried Unreal Engine but switched to C# and Unity after facing challenges. After a month learning Unity, Puddle began releasing small games, gradually progressing to demo-like projects.
+
+    Alongside programming, Puddle pursued art, creating posters for his local school and sharing work on social media. As his skills grew, game development became more than a hobby. Discovering Full Sail University, Puddle applied for their Emerging Tech Scholarship.
+
 </section>
 
 <section class="display-box span-one b3 b1 b2 b4 large Style1"></section>
+<section class="text-box span-three NoOutline">
+ Though initially unsuccessful with his "Labyrinth" submission, he reapplied with "Planetarium" and earned the scholarship.
+    
+Now in college, Puddle works on personal and school projects, including "MechMaze," while further developing his skills.
+    
+</section>
 
 <!--<section class = "text-box span-one  NoOutline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati exercitationem, rem quos molestias consequuntur quam harum eaque illum doloremque quaerat, aliquam corporis nisi omnis. Veritatis accusamus at officia iusto eveniet?</section>-->
 
@@ -114,10 +112,7 @@
 
 <section class="text-box span-four micro text-footer NoOutline">
 
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Blanditiis exercitationem, nostrum tenetur cupiditate inventore at. 
-    Ea veritatis est iste aspernatur, tempora aliquid modi nesciunt, 
-    quasi ullam fugiat rerum culpa doloribus.
+    ---
 
 </section><!--LINE-->
 <section class="section-divider no-line"></section>
