Added warnings for unsupported devices on the games page

--- a/Game Pages/GOL.html
+++ b/Game Pages/GOL.html
@@ -49,19 +49,20 @@
             <section class="main-title align-center">THE GAME OF LIFE</section>
             <section class="section-divider"></section>
 
-
+            <section class="second-title align-left mobile-exclusive span-four">Unsupported device</section>
+            <section class="text-box NoOutline span-four mobile-exclusive align-center"> This game supports mouse and keyboard only</section>
 
 
 
             <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2"></section>
+            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline">
+            <section class="span-four NoOutline desktop-exclusive">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/6015633?color=080915" width="965" height="665"><a href="https://puddleglum.itch.io/conways-game-of-life">Play Conway's Game of Life on itch.io</a></iframe>           
             </section>
             <section class="section-divider no-line micro"></section>
-                <section class="CrossBarSection Style1 b3 b4"></section>
+                <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
 
