--- a/Games.html
+++ b/Games.html
@@ -59,14 +59,13 @@
 
 
     <section  class="DisplayGrid Style1 span-four">
-        <section class="Style4"></section>
-        <section class="span-two span-two-vert">
+        <section class="Style4 clickable"></section>
+        <section class="span-two span-two-vert clickable">
           <a href="Game Pages/Labyrinth.html">  <img src="assets/images/Labyrinth Web Logo.png"></a>
         </section>
-        <section class="Style10"></section>    
-        <section class="Style11"></section>
-        <section class="Style9"></section>
-
+        <a class="pseudo-section Style10 clickable" href="Game Pages/Labyrinth.html"></a>    
+        <a class="pseudo-section Style11 clickable" href="Game Pages/Labyrinth.html"></a>
+        <a class="pseudo-section Style9 clickable" href="Game Pages/Labyrinth.html"></a>
     </section>
 
 
@@ -83,13 +82,13 @@
     <section class="section-divider"></section>
     <section class="section-divider no-line small"></section>
     <section  class="DisplayGrid Style1 span-four">
-        <section class="Style9"></section>
-        <section class="span-two span-two-vert">
+        <section class="Style9 clickable"></section>
+        <section class="span-two span-two-vert clickable">
             <a href="Game Pages/The Designer.html"> <img src="assets/images/The Designer Web Logo.png"></a>
         </section>
-        <section class="Style1"></section>
-        <section class="Style2"></section>
-        <section class="Style8"></section>
+        <a class="pseudo-section Style1 clickable" href="Game Pages/The Designer.html"></a>
+        <a class="pseudo-section Style2 clickable" href="Game Pages/The Designer.html"></a>
+        <a class="pseudo-section Style8 clickable" href="Game Pages/The Designer.html"></a>
 
     </section>
 
@@ -107,38 +106,33 @@
 
         <section class="second-title span-four align-center">MechMaze</section>
 
-        <section class="span-three span-three-vert hide-overflow">
+        <section class="span-three span-three-vert hide-overflow clickable">
              <a href="Game Pages/MechMaze.html"> <img src="assets/images/Mechanical Labyrinth Web Logo.png"></a>
 
         </section>
-        <section class="span-one span-three-vert  Style4"></section>
+        <a class="pseudo-section span-three-vert Style4 clickable" href="Game Pages/MechMaze.html"></a>
 
-        <section class="span-two span-two-vert b4 Style10"></section>
-        <section class="span-two span-three-vert b3 b4 Style2"></section>
+        <a class="pseudo-section span-two span-two-vert b4 Style10 clickable" href="Game Pages/MechMaze.html"></a>
+        <a class="pseudo-section span-two span-three-vert b3 b4 Style2 clickable" href="Game Pages/MechMaze.html"></a>
 
     </section>
-
-
     <section  class="DisplayGrid Style2 span-three-vert span-two NoOutline">
 
         <section class="second-title span-four align-center">Babylon</section>
 
 
-        <section class="span-one span-one-vert b1 Style5">
-        </section>
-        <section class="span-three span-two-vert Style5">
-           <a href="Game Pages/Babylon.html"> <img src="assets/images/Babylon Web Logo.png"></a>
+        <a class="pseudo-section span-one span-one-vert b1 Style5 clickable" href="Game Pages/Babylon.html"></a>
+        <a class="pseudo-section span-three span-two-vert Style5 clickable" href="Game Pages/Babylon.html">
+            <img src="assets/images/Babylon Web Logo.png">
+        </a>
 
 
-        </section>
+        <a class="pseudo-section span-one span-three-vert b4 b3 Style11 clickable" href="Game Pages/Babylon.html"></a>
+        <a class="pseudo-section span-one span-one-vert Style10 clickable" href="Game Pages/Babylon.html"></a>
 
+        <a class="pseudo-section span-two span-one-vert  Style3 clickable" href="Game Pages/Babylon.html"></a>    
 
-        <section class="span-one span-three-vert b4 b3 Style11"></section>
-        <section class="span-one span-one-vert Style10"></section>
-
-        <section class="span-two span-one-vert  Style3"></section>    
-
-        <section class="span-three span-two-vert  Style10 b3"></section>    
+        <a class="pseudo-section span-three span-two-vert  Style10 b3 clickable" href="Game Pages/Babylon.html"></a>    
 
     </section>
 
@@ -148,14 +142,17 @@
     <section class="section-divider"></section>
     <section class="section-divider no-line small"></section>
     <section  class="DisplayGrid Style1 span-four span-one-vert NoOutline">
-        <section class="Style3 b1"></section>
-        <section class="Style1">
-            <a href="Game Pages/Planetarium.html"> <img src="assets/images/Planetarium Web Logo.png"></a>
-        </section>
-        <section class="Style2">
-            <a href="Game Pages/Planetarium.html"> <img src="assets/images/Art Display 13.png"></a>
-        </section>
-        <section class="Style9 b3"></section>
+        <a class="pseudo-section Style3 b1 clickable" href="Game Pages/Planetarium.html"></a>
+        <a class="pseudo-section Style1 clickable" href="Game Pages/Planetarium.html">
+            <img src="assets/images/Planetarium Web Logo.png">
+        </a>
+        
+        <a class="pseudo-section Style2 clickable" href="Game Pages/Planetarium.html">
+             <img src="assets/images/Art Display 13.png">
+        </a>
+
+
+        <a class="pseudo-section Style9 b3 clickable" href="Game Pages/Planetarium.html"></a>
 
     </section>
 
