--- a/Social.html
+++ b/Social.html
@@ -34,13 +34,17 @@
 
 
 <section class="DisplayGrid Style1  span-four span-one-vert">
-    <section class=" b3">
+
+
+    <section class=" b3 clickable">
         <a href="https://www.instagram.com/puddle.studios/" target="_blank"><img src="assets//images/Instagram logo.png"></a>
     </section>
-    <section class="span-two Style2 b1">
-    </section> 
 
-    <section>
+
+    <a class="pseudo-section clickable span-two Style2 b1" href="https://www.instagram.com/puddle.studios/" target="_blank">
+    </a> 
+
+    <section class="clickable">
        <a href="https://www.instagram.com/puddle.studios/" target="_blank"> <img src="assets//images/Art Display 1.png"></a>
     </section>
 </section>
@@ -56,10 +60,15 @@ EDGE BAR
 ===============================================-->
 <section class="DisplayGrid Style1 span-three-vert span-four ">
     
-    <section class=" span-four span-two-vert b2"> <a href="https://puddleglum.itch.io/" target="_blank"><img src="assets//images/Itch Promo 1.png"></a> </section>
-    <section class="span-two Style4 b3 b1"  ></section>
-    <section class=" Style10 b4"  ></section>
-    <section class=" Style2 b2"  ></section>
+    <section class=" span-four span-two-vert b2 clickable"> <a href="https://puddleglum.itch.io/" target="_blank"><img src="assets//images/Itch Promo 1.png"></a> </section>
+
+
+    <a class="pseudo-section span-two Style4 b3 b1 clickable" href="https://puddleglum.itch.io/" target="_blank"></a>
+
+
+
+    <a class="pseudo-section Style10 b4 clickable" href="https://puddleglum.itch.io/" target="_blank"></a>
+    <a class="pseudo-section Style2 b2 clickable" href="https://puddleglum.itch.io/" target="_blank"></a>
 </section>
 
 <section class="main-title NoOutline">TUMBLR</section>
@@ -67,12 +76,12 @@ EDGE BAR
 
 <section class="DisplayGrid Style1 span-three-vert span-four ">
     
-    <section class=" span-four"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets//images/Art Display 2.png"></a> </section>
-    <section class=" span-one Style5"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets//images/Puddle Logos.png"> </a> </section>
-    <section class=" span-one span-two-vert b1 b2 Style4"> <a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 4.png"> </a> </section>
-    <section class=" span-one span-two-vert b1 b2 "><a href="https://puddle-studios.tumblr.com/" target="_blank"> <img src="assets/images/Tumblr Promo.png"> </a> </section>
-    <section class=" span-one span-two-vert b3 Style2"> <a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 2.png"> </a> </section>
-    <section class=" span-one b2 b4 Style1"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 3.png"> </a> </section>
+    <section class=" span-four clickable"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets//images/Art Display 2.png"></a> </section>
+    <section class=" span-one Style5 clickable"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets//images/Puddle Logos.png"> </a> </section>
+    <section class=" span-one span-two-vert b1 b2 Style4 clickable"> <a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 4.png"> </a> </section>
+    <section class=" span-one span-two-vert b1 b2 clickable"><a href="https://puddle-studios.tumblr.com/" target="_blank"> <img src="assets/images/Tumblr Promo.png"> </a> </section>
+    <section class=" span-one span-two-vert b3 Style2 clickable"> <a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 2.png"> </a> </section>
+    <section class=" span-one b2 b4 Style1 clickable"><a href="https://puddle-studios.tumblr.com/" target="_blank"><img src="assets/images/Tumblr Promo 3.png"> </a> </section>
 
 </section>
 
