--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <section class="hero">
            <section class="hero-card Style2">
                 <section class="hero-card-cover Style1"></section>
-
                 <section>
 
                     <img src="assets/images/Artist Card.png">
@@ -262,18 +261,18 @@ Now in college, Puddle works on personal and school projects, including "MechMaz
 
     <section class="DisplayGrid Style1 span-four">
 
-        <section class="span-two-vert">
+        <section class="span-two-vert clickable">
             <a href="Art.html"><img src="assets/images/Art Display 3.png"></a>
         </section>
-        <section class="span-three">
+        <section class="span-three clickable">
             <a href="Art.html"><img src="assets/images/Art Display 2.png"></a>
         </section>
-        <section class="span-two">
+        <section class="span-two clickable">
             <a href="Art.html"><img src="assets/images/Art Display 5.png"></a>
 
 
         </section>
-        <section class="span-one">
+        <section class="span-one clickable">
             <a href="Art.html"><img src="assets/images/Art Display 1.png"></a>
         </section>
     </section>
