--- a/Game Pages/Uno.html
+++ b/Game Pages/Uno.html
@@ -48,21 +48,22 @@
         
             <section class="main-title align-center">UNO</section>
             <section class="section-divider"></section>
-
+            <section class="second-title align-left mobile-exclusive span-four">Unsupported device</section>
+            <section class="text-box NoOutline span-four mobile-exclusive align-center"> This game supports mouse and keyboard only</section>
 
 
 
 
             <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2"></section>
+            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline">
+            <section class="span-four NoOutline desktop-exclusive">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/11735995?color=0a090f" width="850" height="500"><a href="https://puddleglum.itch.io/uno">Play Uno on itch.io</a></iframe>           
              </section>
 
             <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4"></section>
+            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
 
