Fixed security error

--- a/Game Pages/MechMaze.html
+++ b/Game Pages/MechMaze.html
@@ -55,7 +55,7 @@
 
 
             <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b1 b2 "></section>
             <section class="section-divider no-line micro"></section>
 
             <section class="span-four NoOutline desktop-exclusive">
@@ -63,7 +63,7 @@
            
            </section>   
            <section class="section-divider no-line micro"></section>
-                <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
+                <section class="CrossBarSection Style1 b3 b4 "></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
             <section class="text-box second-title span-three ">Credits</section>
