--- a/Game Pages/Stelarium.html
+++ b/Game Pages/Stelarium.html
@@ -55,14 +55,14 @@
 
 
             <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b1 b2 "></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline desktop-exclusive">
+            <section class="span-four NoOutline ">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/9928972?color=000d16" width="960" height="620"><a href="https://puddleglum.itch.io/stellarium">Play Stellarium on itch.io</a></iframe>            
                 </section>  
                 <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b3 b4 "></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
             <section class="text-box second-title span-three ">Description</section>
