--- a/Game Pages/Babylon.html
+++ b/Game Pages/Babylon.html
@@ -55,14 +55,14 @@
 
 
             <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b1 b2 "></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline desktop-exclusive">
+            <section class="span-four NoOutline ">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/4573470?color=100c17" width="900" height="520"><a href="https://puddleglum.itch.io/babylon">Play Babylon on itch.io</a></iframe>            
                 </section>
                 <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b3 b4 "></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
             <section class="section-divider no-line large"></section>
