--- a/Game Pages/Labyrinth.html
+++ b/Game Pages/Labyrinth.html
@@ -56,15 +56,15 @@
 
 
             <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b1 b2 "></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline desktop-exclusive">
+            <section class="span-four NoOutline ">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/9448135?color=100d1b" width="960" height="560"><a href="https://puddleglum.itch.io/labyrinth">Play Labyrinth on itch.io</a></iframe>          
             </section>
 
             <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b3 b4 "></section>
             <section class="section-divider no-line small"></section>
 
             <section class="section-divider"></section>
