--- a/Game Pages/The Designer.html
+++ b/Game Pages/The Designer.html
@@ -59,7 +59,7 @@
             <section class="section-divider no-line micro"></section>
 
             <section class="span-four NoOutline ">
-                <iframe frameborder="0" src="https://itch.io/embed-upload/8377691?color=010203" width="960" height="560"><a href="https://puddleglum.itch.io/the-designer">Play The Designer on itch.io</a></iframe>
+                <iframe id="game-window"frameborder="0" src="https://itch.io/embed-upload/8377691?color=010203" width="960" height="560"><a href="https://puddleglum.itch.io/the-designer">Play The Designer on itch.io</a></iframe>
             </section>  
                 <section class="section-divider no-line micro"></section>
             <section class="CrossBarSection Style1 b3 b4 "></section>
@@ -114,4 +114,14 @@ Puzzle 7: ReverseKey > Start > Key > Door<br/><br/>
 
 
 </body>
+<script>
+    var window = document.getElementById("game-window");
+    let context;
+    window.onload = loadEvent();
+    function loadEvent(){
+        context = new AudioContext();
+        context.resume().then(()=>{});
+        console.log("Made Context");
+    }
+</script>
 </html>
