Removed all desktop exclusive pages

--- a/Game Pages/MechMaze.html
+++ b/Game Pages/MechMaze.html
@@ -58,7 +58,7 @@
             <section class="CrossBarSection Style1 b1 b2 "></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline desktop-exclusive">
+            <section class="span-four NoOutline ">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/11634427?color=070c0f" width="960" height="560"><a href="https://puddleglum.itch.io/mechanical-lab">Play Mechanical Lab on itch.io</a></iframe>           
            
            </section>   
