--- a/Game Pages/Uno.html
+++ b/Game Pages/Uno.html
@@ -58,7 +58,7 @@
             <section class="CrossBarSection Style1 b1 b2 "></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline >
+            <section class="span-four NoOutline">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/11735995?color=0a090f" width="850" height="500"><a href="https://puddleglum.itch.io/uno">Play Uno on itch.io</a></iframe>           
              </section>
 
