Fixed unsupported page

--- a/Game Pages/GOL.html
+++ b/Game Pages/GOL.html
@@ -4,7 +4,8 @@
         <title>Puddle Studios Game Of Life</title>
         <link rel="stylesheet" href="../assets/css/styles.css">
         <link rel="shortcut icon" type = "x-icon" href="../assets/images/Tray Icon.png"></link>
-
+        <meta name= “robots” content=index, follow”>
+    </head>
 
 
 
@@ -54,17 +55,25 @@
 
 
 
-            <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2 "></section>
+            <section class="section-divider no-line large desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline ">
+            <section class="span-four NoOutline desktop-exclusive">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/6015633?color=080915" width="965" height="665"><a href="https://puddleglum.itch.io/conways-game-of-life">Play Conway's Game of Life on itch.io</a></iframe>           
             </section>
             <section class="section-divider no-line micro"></section>
-                <section class="CrossBarSection Style1 b3 b4 "></section>
+                <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
+
+                <section class="DisplayGrid Style6 Outline small mobile-exclusive">
+                    <section class="Thumbnail Style7">
+                    </section>
+                </section>
+
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
+
+
 
             <section class="text-box second-title span-three ">Rules</section>
             <section class="text-box span-four NoOutline">
