--- a/Game Pages/Uno.html
+++ b/Game Pages/Uno.html
@@ -4,7 +4,8 @@
         <title>Puddle Studios Uno</title>
         <link rel="stylesheet" href="../assets/css/styles.css">
         <link rel="shortcut icon" type = "x-icon" href="../assets/images/Tray Icon.png"></link>
-
+        <meta name= “robots” content=index, follow”>
+    </head>
 
 
 
@@ -54,16 +55,16 @@
 
 
 
-            <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2 "></section>
+            <section class="section-divider no-line large desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline">
+            <section class="span-four NoOutline desktop-exclusive">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/11735995?color=0a090f" width="850" height="500"><a href="https://puddleglum.itch.io/uno">Play Uno on itch.io</a></iframe>           
              </section>
 
             <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4"></section>
+            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
 
