--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
         <title>Puddle Studios</title>
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="shortcut icon" type = "x-icon" href="assets/images/Tray Icon.png"></link>
+        <meta name= “robots” content=index, follow”>
 
 
+        <meta property=”og:title” content="Puddle Studios">
+    <meta property=”og:description” content=""> 
+    <meta property="og:url" content="https://puddle-studios.com">
+
+    <meta property=”og:image” content="\assets\images\Puddle Logos.png">
+
+    </head>
 
 
 <body class="body">
@@ -242,11 +250,6 @@ Now in college, Puddle works on personal and school projects, including "MechMaz
     </section>
 </section>
 
-
-
-
-
-
 </section>
 <section class="section-divider no-line"></section>
 <section class="section-divider"></section>
@@ -276,11 +279,6 @@ Now in college, Puddle works on personal and school projects, including "MechMaz
             <a href="Art.html"><img src="assets/images/Art Display 1.png"></a>
         </section>
     </section>
-
-
-
- 
-
 
 
     <section class="section-divider no-line small"></section>
