--- a/Art.html
+++ b/Art.html
@@ -4,7 +4,8 @@
         <title>Puddle Studios</title>
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="shortcut icon" type = "x-icon" href="assets/images/Tray Icon.png"></link>
-
+        <meta name= “robots” content=index, follow”>
+    </head> 
 
 
 <body class="body">
