--- a/Game Pages/Babylon.html
+++ b/Game Pages/Babylon.html
@@ -4,7 +4,8 @@
         <title>Puddle Studios Babylon</title>
         <link rel="stylesheet" href="../assets/css/styles.css">
         <link rel="shortcut icon" type = "x-icon" href="../assets/images/Tray Icon.png"></link>
-
+        <meta name= “robots” content=index, follow”>
+    </head>
 
 
 
@@ -54,15 +55,22 @@
 
 
 
-            <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2 "></section>
+            <section class="section-divider no-line large desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive "></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline ">
+            <section class="span-four NoOutline desktop-exclusive">
                 <iframe frameborder="0" src="https://itch.io/embed-upload/4573470?color=100c17" width="900" height="520"><a href="https://puddleglum.itch.io/babylon">Play Babylon on itch.io</a></iframe>            
                 </section>
-                <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4 "></section>
+                <section class="section-divider no-line micro "></section>
+            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
+
+
+            <section class="DisplayGrid Style6 Outline small mobile-exclusive">
+                <section class="Thumbnail Style7">
+                </section>
+            </section>
+
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
             <section class="section-divider no-line large"></section>
