--- a/Game Pages/The Designer.html
+++ b/Game Pages/The Designer.html
@@ -4,7 +4,8 @@
         <title>Puddle Studios The Designer</title>
         <link rel="stylesheet" href="../assets/css/styles.css">
         <link rel="shortcut icon" type = "x-icon" href="../assets/images/Tray Icon.png"></link>
-
+        <meta name= “robots” content=index, follow”>
+    </head>
 
 
 
@@ -54,15 +55,15 @@
 
 
 
-            <section class="section-divider no-line large"></section>
-            <section class="CrossBarSection Style1 b1 b2 "></section>
+            <section class="section-divider no-line large desktop-exclusive"></section>
+            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four NoOutline">
+            <section class="span-four NoOutline desktop-exclusive">
                 <iframe id="game-window"frameborder="0" src="https://itch.io/embed-upload/8377691?color=010203" width="960" height="560"><a href="https://puddleglum.itch.io/the-designer">Play The Designer on itch.io</a></iframe>
             </section>  
                 <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4 "></section>
+            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
             <section class="section-divider no-line small"></section>
