Made every game div clickable, replaced history with forgotten god overview

--- a/index.html
+++ b/index.html
@@ -93,21 +93,23 @@
 <section class="section-divider no-line micro"></section>
 <!--LINE-->
 
-<section class = "text-box span-three large NoOutline">
-    <section class="NoOutline text-headerS1">HISTORY</section>
-    &emsp;&emsp; Puddle’s interest in programming began early, supported by his parents. At 12, he started with C++ and continued until 14, when he tried Unreal Engine but switched to C# and Unity after facing challenges. After a month learning Unity, Puddle began releasing small games, gradually progressing to demo-like projects.
 
-    Alongside programming, Puddle pursued art, creating posters for his local school and sharing work on social media. As his skills grew, game development became more than a hobby. Discovering Full Sail University, Puddle applied for their Emerging Tech Scholarship.
+
+<section class="DisplayGrid Style2 span-four span-two-vert NoOutline">
+    <section class = "text-box span-six  NoOutline">
+        <section class="NoOutline text-headerS1">Forgotten God</section>
+    </section>
+  
+    <section class=" span-two b3 b1 b2 b4 span-four-vert Style1"></section>
+<section class="text-box span-six span-three-vert NoOutline">
+
+    &emsp;&emsp;Forgotten god is a procedurally generated rougelike about an acolyte searching for their God.  <br/><br/>
+    &emsp;&emsp;  Planned to be their first commercial release, Forgotten god will be a continuation of the "Labyrinth" demo. This continuation brings many new features, such as, procedural level generation, Spell leveling systems, shops, accesories and many more. Entering early access in Q1 2025.
 
 </section>
 
-<section class="display-box span-one b3 b1 b2 b4 large Style1"></section>
-<section class="text-box span-three NoOutline">
- Though initially unsuccessful with his "Labyrinth" submission, he reapplied with "Planetarium" and earned the scholarship.
-    
-Now in college, Puddle works on personal and school projects, including "MechMaze," while further developing his skills.
-    
 </section>
+
 
 <!--<section class = "text-box span-one  NoOutline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati exercitationem, rem quos molestias consequuntur quam harum eaque illum doloremque quaerat, aliquam corporis nisi omnis. Veritatis accusamus at officia iusto eveniet?</section>-->
 
@@ -117,7 +119,7 @@ Now in college, Puddle works on personal and school projects, including "MechMaz
 <section class="section-divider no-line micro"></section>
 
 
-<section class="text-box span-four micro text-footer NoOutline">
+<section class="text-box span-four micro text-footer NoOutline align-center">
 
     ---
 
