--- a/Social.html
+++ b/Social.html
@@ -7,6 +7,15 @@
     <link rel="shortcut icon" type="x-icon" href="assets/images/Tray Icon.png">
     </link>
     <meta name=“robots” content=index, follow”>
+
+
+    <meta property=”og:title” content="Puddle Studios">
+    <meta property=”og:description” content="">
+    <meta property="og:url" content="https://puddle-studios.com">
+
+    <meta property="og:image" content="">
+    <meta name="twitter:image" content="assets/images/Tray Icon.png">
+
 </head>
 
 
