--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property=”og:description” content="">
     <meta property="og:url" content="https://puddle-studios.com">
 
-    <meta property=”og:image” content="\assets\images\Puddle Logos.png">
+    <meta property="og:image" content="">
+    <meta name="twitter:image" content="assets/images/Tray Icon.png">
 
 </head>
 
