added metadata image

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 
     <meta property=”og:title” content="Puddle Studios">
-    <meta property=”og:description” content="">
+    <meta property=”og:description” content="Puddle-Studios founded in 2020 is a solo indie game developement studio working on 'Forgotten God'">
     <meta property="og:url" content="https://puddle-studios.com">
 
-    <meta property="og:image" content="">
-    <meta name="twitter:image" content="assets/images/Tray Icon.png">
+    <meta property="og:image" content="C:\Users\puddl\Desktop\puddle-studios.com\assets\images\Puddle Logos.png">
+    <meta name="twitter:image" content="C:\Users\puddl\Desktop\puddle-studios.com\assets\images\Puddle Logos.png">
 
 </head>
 
@@ -303,6 +303,8 @@
             <section class="section-divider no-line small"></section>
 
             <section class="section-divider"></section>
+            <section class="section-divider no-line micro"></section>
+
 <section class="text-footer no-outline align-center span-four">© 2024 puddle-studios.</section>
 
             <section class="section-divider no-line"></section>
