Adjusted embed image

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property=”og:description” content="Puddle-Studios founded in 2020 is a solo indie game developement studio working on 'Forgotten God'">
     <meta property="og:url" content="https://puddle-studios.com">
 
-    <meta property="og:image" content="C:\Users\puddl\Desktop\puddle-studios.com\assets\images\Puddle Logos.png">
-    <meta name="twitter:image" content="C:\Users\puddl\Desktop\puddle-studios.com\assets\images\Puddle Logos.png">
+    <meta property="og:image" content="\assets\images\Puddle Logos.png">
+    <meta name="twitter:image" content="\assets\images\Puddle Logos.png">
 
 </head>
 
